@startuml
'https://plantuml.com/sequence-diagram


Class Instrumento{
csv
precio
stock
tipoMaterial
nombreInstrumento
}

class Cuerda{
tipoCuerda
numeroCuerda
tipo
}


class Percusion{
tipo
altura
}

class Viento{

}

Instrumento  <|-- Cuerda
Instrumento  <|-- Percusion
Instrumento  <|-- Viento

@enduml